--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #70c6c7;
+    background-color: #D8BFD8;
 }
 
 .resume-contents {
@@ -21,13 +21,13 @@ body {
 .left-section {
     grid-column: span 2;
     height: 100%;
-    background-color: #00204A;
+    background-color: #FF4500;
 }
 
 .right-section {
     grid-column: span 5;
     height: 100%;
-    background-color: #4B6982;
+    background-color: #8B008B;
     border-radius: 0px 60px 0px 0px;
 }
 
@@ -37,17 +37,17 @@ body {
 
 .profile {
     width: 100%;
-    border-bottom: 2px solid #1B2631;
+    border-bottom: 1px solid #1B2631;
 }
 
 .profile .profile-image {
     width: 100%;
     border-radius: 50%;
-    border: 8px solid #1B2631;
+    border: 8px solid #FF4500;
 }
 
 .name {
-    color: #D6DBDF;
+    color: #F5DEB3;
     font-size: 30px;
     letter-spacing: 2px;
     text-transform: uppercase;
@@ -68,7 +68,7 @@ body {
 
 /* .contact-info { border-bottom: 2px solid #1B2631; } */
 .left-title {
-    color: #FDB44B;
+    color: #F5DEB3;
     font-size: 20px;
     letter-spacing: 2px;
     text-transform: uppercase;
@@ -96,7 +96,7 @@ body {
 .references ul li i {
     padding-right: 1rem;
     font-size: 18px;
-    color: #2E86C1;
+    color: #F5DEB3;
 }
 
 .skills ul {
@@ -123,7 +123,7 @@ body {
 
 .referance-profession {
     font-size: 16px;
-    color: #d6dbdfaf;
+    color: #D8BFD8;
     letter-spacing: 1px;
     /* text-transform: uppercase; */
     padding-bottom: .4rem;
@@ -135,7 +135,7 @@ body {
 }
 
 .right-title {
-    color: #70C6C7;
+    color: #D8BFD8;
     font-size: 40px;
     letter-spacing: 2px;
     text-transform: uppercase;
